--- a/index.html
+++ b/index.html
@@ -90,19 +90,19 @@
 <div class="contianer">
   <div class="row">
     <div class="col">
-      <img src="image/1.webp" alt="" class="h-100 w-100 rounded-top-pill">
+      <img src="1.webp" alt="" class="h-100 w-100 rounded-top-pill">
     </div>
     <div class="col position-relative ">
-      <img src="image/1.webp" alt="" class="h-75 w-75 rounded-top-pill position-absolute bottom-0 ">
+      <img src="1.webp" alt="" class="h-75 w-75 rounded-top-pill position-absolute bottom-0 ">
     </div>
     <div class="col position-relative p-0">
-      <img src="image/1.webp" alt="" class="h-75 w-75  rounded-top-pill position-absolute  bottom-0">
+      <img src="1.webp" alt="" class="h-75 w-75  rounded-top-pill position-absolute  bottom-0">
     </div>
     <div class="col position-relative p-0">
-      <img src="image/1.webp" alt="" class="h-75 w-75  rounded-top-pill position-absolute  bottom-0">
+      <img src="1.webp" alt="" class="h-75 w-75  rounded-top-pill position-absolute  bottom-0">
     </div>
     <div class="col p-0">
-      <img src="image/1.webp" alt="" class="h-100 w-100  rounded-top-pill ">
+      <img src="1.webp" alt="" class="h-100 w-100  rounded-top-pill ">
     </div>
   </div>
 </div>
